# hec-python-library

./: .readthedocs.yml  LICENSE  README.md  WorkshopExample.dss  analyze  analyze.bat  dir  document  document.bat  dss_to_cwmsdb.py  fixup_top_level_html.py  format  format.bat  prepare_dss_file.py  publish  pyproject.toml  pytest.ini  qual.py  ratings_test.txt  run-tests  run-tests.bat  test.bat
.github/workflows/: ci.yaml
docs/: hec.html  index.html  search.js
docs/hec/: const.html  datastore.html  duration.html  hectime.html  interval.html  location.html  parameter.html  quality.html  rating.html  rounding.html  shared.html  timeseries.html  timespan.html  unit.html
docs/html/: hec.html  search.js
examples/: datastore_examples.ipynb  duration_examples.ipynb  hectime_examples.ipynb  hectime_examples.py  interval_examples.ipynb  interval_examples.py  location_examples.ipynb  paired_data_examples.ipynb  parameter_examples.ipynb  quality_examples.ipynb  rating_set_examples.ipynb  timeseries_examples.ipynb  timespan_examples.ipynb  timespan_examples.py  unit_examples.ipynb
hec/: __init__.py  const.py  datastore.py  duration.py  hectime.py  interval.py  location.py  parameter.py  quality.py  rounding.py  shared.py  timeseries.py  timespan.py  unit.py
hec/rating/: __init__.py  abstract_rating.py  abstract_rating_set.py  local_rating_set.py  paired_data.py  paired_data_rating.py  rating_shared.py  rating_specification.py  rating_template.py  reference_rating_set.py  (+2 more)
rtd_docs/: CrossReference.rst  MathFunctions.rst  Overview.rst  base_parameter_table.rst  conf.py  index.rst
test/: __init__.py  shared.py  test_datastore.py  test_duration.py  test_hectime.py  test_interval.py  test_local_rating_set.py  test_location.py  test_paired_data.py  test_parameter.py  test_quality.py  test_rating_set.py  test_rating_specification.py  test_rating_template.py  test_table_rating.py  test_timeseries.py  test_timespan.py  test_unit.py
(+280 files in other folders)
