[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hec"]

[tool.setuptools.package-data]
hec = ["resources/*.txt"]

[project]
name = "hec-python-library"
version = "0.8"
description = "Python 3 implementation of HEC Java/Jython utility classes"
authors = [
    { name = "Michael Perryman", email = "michael.d.perryman@usace.army.mil" }
]
# license = { file = "LICENSE" }
# readme = "README.md"
keywords = ["HEC", "timeseries", "time series"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "Pint>=0.24.3",
    "Pint-pandas>=0.6.2",
    "tzlocal>=5.2"
]
